--- a/designmode/设计模式.md
+++ b/designmode/设计模式.md
@@ -2,4 +2,5 @@ A - 添加 、 D - 删除 、 U - 更新
 
 |     时间    |   操作  |     备注     | 作者 |
 |     ----   |   ---- |     ----     |---- |
-| 2020-00-00 |  A、U  |  添加工厂模式   | lsy |
+| 2020-09-02 |    A   |  添加工厂模式   | lsy |
+| 2020-09-02 |    A   | 添加抽象工厂模式 | lsy |
