--- a/designpattern/设计模式.md
+++ b/designpattern/设计模式.md
@@ -2,8 +2,10 @@ A - 添加 、 D - 删除 、 U - 更新
 
 |     时间    |   操作  |     备注     | 作者 |
 |     ----   |   ---- |     -----    |---- |
-| 2020-09-02 |    A   |  添加工厂模式  | lsy |
-| 2020-09-02 |    A   | 添加抽象工厂模式| lsy |
-| 2020-09-03 |    A   | 添加建造者模式 | lsy |
-| 2020-09-03 |    A   |  添加原型模式  | lsy |
-| 2020-09-03 |    A   |  添加单例模式  | lsy |
+| 2020-09-02 |    A   | 添加工厂模式、抽象工厂模式 | lsy |
+| 2020-09-03 |    A   | 添加建造者模式、原型模式、单例模式 | lsy |
+| 2020-09-06 |  A、U  | 合并RX310代码 | lsy |
+| 2020-09-08 |    A   | 新增桥接模式、组合模式、装饰着模式 | lsy |
+| 2020-09-09 |    A   | 新增装饰着模式、代理模式、享元模式 | lsy |
+| 2020-09-10 |   A、U | 新增责任链模式、简化包命名、更新pom.xml文件 | lsy |
+| 2020-09-12 |   A、U | 新增命令行模式、更新设计模式.md文件 | lsy |
