--- a/designpattern/设计模式.md
+++ b/designpattern/设计模式.md
@@ -1,4 +1,4 @@
-A - 添加 、 D - 删除 、 U - 更新
+A - 新增 、 D - 删除 、 U - 更新
 
 |     时间    |   操作  |     备注    | 作者 |
 |     ----   |   ---- |     -----    |---- |
@@ -9,3 +9,6 @@ A - 添加 、 D - 删除 、 U - 更新
 | 2020-09-09 |    A   | 新增装饰着模式、代理模式、享元模式 | lsy |
 | 2020-09-10 |   A、U | 新增责任链模式、简化包命名、更新pom.xml文件 | lsy |
 | 2020-09-12 |   A、U | 新增命令行模式、更新设计模式.md文件 | lsy |
+| 2020-09-15 |   A、U | 新增迭代器模式、更新包目录 | lsy |
+| 2020-09-16 |    A   | 新增中介模式 | lsy |
+| 2020-09-17 |   A、U | 新增备忘录模式、新增观察者模式、更新包目录 | lsy |
