U:整理算法模块

--- a/designpattern/设计模式.md
+++ b/designpattern/设计模式.md
@@ -11,6 +11,6 @@ A - 新增 、 D - 删除 、 U - 更新
 | 2020-09-12 |   A、U | 新增命令行模式、更新设计模式.md文件 | lsy |
 | 2020-09-15 |   A、U | 新增迭代器模式、更新包目录 | lsy |
 | 2020-09-16 |    A   | 新增中介模式 | lsy |
-| 2020-09-17 |   A、U | 新增备忘录模式、新增观察者模式、更新包目录 | lsy |
+| 2020-09-17 |   A、U | 新增备忘录模式、新增观察者模式、新增工厂方法模式、更新包目录 | lsy |
 | 2020-09-00 |    A   | 新增状态模式、新增策略模式| lsy |
 | 2020-09-00 |    A   | 新增模板模式、新增访问者模式| lsy |
