A:新增内部类Demo

--- a/oop/src/main/java/com/lsy/oop/innerclass/内部类.md
+++ b/oop/src/main/java/com/lsy/oop/innerclass/内部类.md
@@ -2,4 +2,7 @@
 static关键字可以修饰内部类,但是不能修饰外部类.  
 因为外部类的上一级程序单元是包,所以不能使用static修饰.
 而内部类的上一级程序单元是外部类,使用static修饰可以将内部类变成外部类相关,
-而不是外部类实例相关.
+而不是外部类实例相关.  
+* 静态内部类
+* 非静态内部类
+* 局部内部类 
