--- a/oop/src/main/java/com/lsy/oop/genericity/泛型.md
+++ b/oop/src/main/java/com/lsy/oop/genericity/泛型.md
@@ -4,4 +4,5 @@
 |     符号    |   含义  |     备注    | 
 |     ----   |   ---- |     -----    |
 | ？| 未知类型 | 匹配任何类型 |
-| ？extend E | 被限制的通配符 | 匹配任何类型 |
+| ？extend E | 设置通配符上限 | 匹配任何类型 |
+| ？super E | 设置通配符下限 | 匹配任何类型 |
