--- a/oop/src/main/java/com/lsy/oop/genericity/泛型.md
+++ b/oop/src/main/java/com/lsy/oop/genericity/泛型.md
@@ -3,6 +3,9 @@
 * 所谓泛型就是在定义类、接口、方法时使用类型参数，这个类型参数将在声明变量、创建对象、调用方法时动态指定。
 |     符号    |   含义  |     备注    | 
 |     ----   |   ---- |     -----    |
-| ？| 未知类型 | 匹配任何类型 |
-| ？extend E | 设置通配符上限 | 匹配任何类型 |
-| ？super E | 设置通配符下限 | 匹配任何类型 |
+| <?> | 泛型 | 匹配任何类型 |
+| <?extend E> | 设置通配符上限 | 协变只出不进 |
+| <?super E> | 设置通配符下限 | 型变(逆变)只进不出 |
+
+* 协变的泛型 只能调用泛型类型作为返回值类型的方法，而不能调用泛型类型作为参数的方法 --> 只出不进 
+* 逆变的泛型 只能调用泛型类型作为参数的方法，而不能调用泛型类型作为返回值类型的方法 --> 只进不出
