--- a/threads/src/main/java/com/lsy/thread/base/并发编程基础.md
+++ b/threads/src/main/java/com/lsy/thread/base/并发编程基础.md
@@ -2,3 +2,12 @@
     wait()后进入等待池并释放锁。
 锁池:
     notify()后进入锁池，锁池中的线程可以申请获取锁。
+    
+----------------------------------------------------
+
+关键字synchronized与wait()和notify()/notifyAll()方法可以实现等待/通知模型。
+类ReentrantLock也可以实现同样功能，但需要借助Condition(对象监视器)对象。 
+在使用notify()/notifyAll()方法进行通知时，被通知的线程确实有JVM随机选择的，
+但使用ReentrantLock结合Condition类可以实现选择性通知，是Condition类中默认提供的。
+synchronized关键字相当于整个Lock对象只有一个单一的Condition对象，所有线程都注册在一个对象的身上。
+线程notifyAll()时，需要通知所有的WAITING线程，没有选择权。
